# dragengine

./: .clang-tidy  .gitattributes  .gitignore  AUTHORS  README  README.md  SConsCommon.py  SConsExternCommon.py  SConsPlatformAndroid.py  SConsPlatformWebWasm.py  SConstruct  autofix_with_clang.sh  build_windows.sh  clear_cppcheck_ainfo.sh  custom.py  debianBuild.sh  debianFixManifests.py  debianPrepare.source  dist.android.custom.py  dist.beos.custom.py  dist.custom.py  dist.macos.custom.py  dist.posix.custom.py  dist.windows.custom.py  dockerBuildWindows.sh  dockerBuildWindowsClang.sh  dragengine.code-workspace  find_missing_translations_igde.py  find_missing_using_ref.py  find_prohibited_new.py  find_refcount_public_destructor.py  prepare_local_dir_mode.source  remove_unused_translation_entries.py  repos.lnk  run_flawfinder.sh  separateDebugSymbols.sh  wasmRebuildModules.sh  wasm_notes  windowsSetupCompiler.dockerfile
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_android.yml  build_android_aarch64.yml  build_android_armv7.yml  build_ghpages.yml  build_linux.yml  build_linux_ci.yml  build_live.yml  build_msix.yml  build_testing.yml  build_web.yml  build_windows.yml  build_windows_installer.yml  build_windows_vs.yml  codeql.yml  custom_android.py  custom_android_aarch64.py  custom_android_armv7.py  custom_linux.py  custom_linux_ci.py  custom_package_focal.py  custom_web.py  custom_windows.py  development_android.yml  development_windows.yml  github_test.yml  live.yml  nightly.yml  nightly_build.yml  nightly_checks.yml  nightly_custom.py  nightly_custom_linux.py  nightly_custom_windows.py  nightly_linux.yml  package_focal.yml  prerelease_checks.py  prerelease_checks.yml  rebuildmsix.yml  release.yml  snapshot.yml  temptest.yml  (+4 more)
_temp_wasm/: SConsHeaders.py  SConsLibrary.py  SConstruct
archive/: SConsHaikuHpkg.py  SConscript
archive/haiku_packageinfo/: dragengine  dragengine-develop  dragengine-setup-script.sh  dragengine.in  igde  igde-develop  notes
debian/: .gitignore  changelog  control  copyright  files  libdragengine1.postinst  postinst  rules  watch
debian/source/: include-binaries  options
detesting/: .gitattributes  .gitignore  LICENSE  README.md  detesting.degd  detesting.degp  notes  project.xml
detesting/data/: configuration.ptree.xml
distribute/windows/: .gitignore
ghdocs/: .gitignore  Gemfile  _build.py  _config.yml  apidoc.markdown  index.markdown  localdirmode.markdown
ghdocs/apidoc/: deigde.markdown  delauncher.markdown  dragengine.markdown  dragonscript.markdown  index.markdown
ghdocs/building/: dependencies.markdown  index.markdown  linux.markdown  windows.markdown
ghdocs/xmlschema/: index.markdown
installer/: .gitignore  SConscript  build_msix.py  install-deigde-ci.sh.in  install-deigde-dev.sh.in  install-deigde.sh.in  install-dragengine-ci.sh.in  install-dragengine-dev.sh.in  install-dragengine.sh.in
installer/windows/: .gitignore  create_installer.sh  (+11 more)
src/: .gitignore
src/launcher/android/app/src/main/cpp/: CMakeLists.txt  CustomEvent.h  EngineModule.cpp  EngineModule.h  FDFileReader.cpp  FDFileReader.h  FDProducer.h  FDVFSContainer.cpp  FDVFSContainer.h  Game.cpp  Game.h  GameActivityAdapter.cpp  GameActivityHandler.h  GameProfile.cpp  GameProfile.h  GameRunParams.cpp  GameRunParams.h  GlueLauncher.cpp  JniFDProducer.cpp  JniFDProducer.h  JniHelper.cpp  JniHelper.h  Launcher.cpp  Launcher.h  RemoteLauncherClient.cpp  RemoteLauncherClient.h  RemoteLauncherHandler.cpp  RemoteLauncherHandler.h  RunGameHandler.cpp  RunGameHandler.h  game_activity_adapter.cpp  launcherglue.cpp
src/modules/scripting/dragonscript/kdev_lang_dscript/: CMakeLists.txt
src/modules/scripting/dragonscript/kdev_lang_dscript/src/: CMakeLists.txt  DSLanguageSupport.cpp  DSLanguageSupport.h  DSParseJob.cpp  DSParseJob.h  Highlighting.cpp  Highlighting.h  dragonscript-mimetype.xml  kate-dragonscript.xml  kdev_lang_dscript.json
src/modules/scripting/dragonscript/kdev_lang_dscript/src/codecompletion/: CMakeLists.txt  DSCodeCompletionContext.cpp  DSCodeCompletionContext.h  DSCodeCompletionModel.cpp  DSCodeCompletionModel.h  DSCodeCompletionWorker.cpp  DSCodeCompletionWorker.h
src/modules/scripting/dragonscript/kdev_lang_dscript/src/configpage/: CMakeLists.txt  ProjectConfigPage.cpp  ProjectConfigPage.h  projectConfigPage.ui
src/modules/scripting/dragonscript/kdev_lang_dscript/src/dslangdoc/: Array.ds  Block.ds  Boolean.ds  Byte.ds  Dictionary.ds  Enumeration.ds  Exception.ds  Integer.ds  Object.ds  ObjectReference.ds  README  Set.ds  String.ds  TimeDate.ds  WeakReference.ds  bool.ds  byte.ds  float.ds  int.ds
src/modules/scripting/dragonscript/kdev_lang_dscript/src/dslangdoc/exceptions/: EDivisionByZero.ds  EInvalidAction.ds  EInvalidCast.ds  EInvalidParam.ds  ENullPointer.ds  EOutOfBounds.ds  EOutOfMemory.ds
src/modules/scripting/dragonscript/kdev_lang_dscript/src/dslangdoc/introspection/: Class.ds  DS.ds  Function.ds  Package.ds  Variable.ds
src/modules/scripting/dragonscript/kdev_lang_dscript/src/dslangdoc/math/: Math.ds
src/modules/scripting/dragonscript/kdev_lang_dscript/src/duchain/: CMakeLists.txt  ContextBuilder.cpp  ContextBuilder.h  DeclarationBuilder.cpp  DeclarationBuilder.h  DumpChain.cpp  DumpChain.h  EditorIntegrator.cpp  EditorIntegrator.h  ExpressionVisitor.cpp  ExpressionVisitor.h  Helpers.cpp  Helpers.h  PinNamespaceVisitor.cpp  PinNamespaceVisitor.h  UseBuilder.cpp  UseBuilder.h
src/modules/scripting/dragonscript/kdev_lang_dscript/src/parser/: CMakeLists.txt  DebugAst.cpp  DebugAst.h  ParseSession.cpp  ParseSession.h  TokenText.cpp  TokenText.h  dragonscript.g  dragonscript.lex  dsp_lexer.h  dsp_tokenstream.h
src/modules/scripting/dragonscript/kdev_lang_dscript/tests/: accept.ds
uwp/: uwp.sln
vs/: .gitignore  Directory.Build.Props  Get-FileHash.psm1  clean_all.ps1  clean_modules.ps1  clean_opengl.ps1  clean_scripting.ps1  clean_ultimate.ps1  copy_files.ps1  copy_manifest.ps1  dragengine.sln  get_version.ps1  install_file.ps1  shared.psm1  update_vcxproj_files.py  vs.sln
(+16824 files in other folders)
